--- a/gpt.org
+++ b/gpt.org
@@ -1,4 +1,4 @@
-#+Title:GPT通证经济模型与Gnews情报交易生态/网络
+#+Title:GPT通证经济模型与Gnews情报交易生态
 * 摘要
 2022年底，Gnews完成了一系列升级，其中最引人注目的莫过于“GNEWS积分系统”。该系统将用户在Gnews上的创作和使用行为转化为 *荣誉积分GPT* 。尽管Gnews团队强调目前的 *GPT* 为Gnews站内的荣誉积分，不具实物价值，Gnews也不提供GPT的购买和兑现服务，GPT仍然非常具有价值潜力。GPT产生（铸造）于用户的使用行为，其底层价值来源于创作、传播和使用。换言之，GPT其实是一种价值的通证，可以实现对创作、传播和使用价值的计量，使这些价值变成一种可以流通、交易的通证，为情报交易市场、网络和生态提供了基础。在此基础上，可以实现情报的交易，以及创作、传播和使用的价值与其他价值的交换。而在情报交易市场和不同价值的交易对基础上，Gnews可以构建一个在经济上自我支持的情报交易网络，进而实现“在互联网上建立一个免费、无广告的开放平台”[fn:1]的目标。\\
 
