--- a/g.series/topics/gpt.commentary.org
+++ b/g.series/topics/gpt.commentary.org
@@ -1,6 +1,6 @@
 #+Title:如何评价Gnews扣除用户GPT的行为？
 #+Author:KURORO(@ydche3/澈澈澈#1106)
-事件本身无需赘述，我希望透过事情，反思并讨论Gnews的 *发展问题* 。\\
+事件本身无需赘述，我也不想批判或追责Gnews团队，只希望透过事情，反思并讨论Gnews的 *发展问题* 。\\
 
 Gnews团队此行为给用户带来了非常不良好的使用体验：其一，Gnews积分系统(GPT积分规则)的 *设计存在漏洞* ；其二，在毫无预兆的情况下扣除用户账户内的GPT，并且 *“误伤”* 许多战友，而事后并未给出及时的回应和相应的 *扣分规则* 。\\
 
