--- a/g.series/topics/gnews.prestige.token.org
+++ b/g.series/topics/gnews.prestige.token.org
@@ -17,22 +17,19 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 其中，\(r(i,j)\)为用户\(j\)对用户\(i\)的认可度，\(o(j)\)为用户\(j\)的对外总认可度。认可度根据用户的认可行为计算，不同的认可行为提供不同的认可度。例如：点赞提供1认可度，评论或回复提供10认可度等。\\
 声望初值如何确定？是否会影响收敛结果？\\
 
-为什么声望值不通过认可行为永久交付？认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。同时，声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下，社区可以发行声望？\\
-
 声望通过用户之间的认可传递的依据是什么？认可行为会为被认可用户的声望背书，换言之，因为“大V”的声望高，，受“大V”认可的用户，在一定程度上也会因此受到其他用户的（非直接）认可。因此，认可的行为可以传递声望。\\
+
+为什么声望值不通过认可行为永久交付？声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。同时，认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下，社区可以发行声望？\\
 
 不活跃的用户声望会逐渐降低，合理吗？一个用户曾经对社区贡献很大，声望很高，但随着时间的推移，声望逐渐下降，这会导致老用户的流失吗？\\
 合理。声望不是对贡献的奖励，而是对贡献的认定。社区根据声望阶段性地进行奖励，对于曾经有过大贡献，获得高声望的用户，已经在当下就获得了奖励。也就是说，即使某用户不活跃了，他的声望下降了，也不会影响他获得应有的奖励。声望应该是一个动态的量，它总表示最近一段时间用户的贡献。所以只有持续不断地提供贡献，才能维持或提高声望。这非常符合现实——爱因斯坦为科学作出了非常大的贡献，他的贡献已经在过去就得到了认可和奖励，在当时他也因此获得了很大的声望，但今天我们不会说他声望高。我们会说郭文贵先生具有很高的声望，因为他在灭共、建立NFSC、发动爆料革命、创立G系列等事情中作出了极大的贡献。所以，声望表示的最近或长或短的一段时期用户的贡献，而过去的贡献为该用户带来的声望，会随着时间衰减，衰减的速率取决于新贡献爆发的速率和过去贡献的持续性。如果一个用户的贡献是阶段性的，那么当下他的声望可能很高，但随着时间推移，如果他没有其他贡献，声望自然逐渐衰减。如果一个用户的贡献具有持久性，里程碑意义，那么即使他的活跃度逐渐下降，没有其他贡献，只要还收益于他的贡献，许多用户还是会保持对他的认可，所以虽然他的声望会衰减，但下降的速率会更慢。甚至会出现另一种情况，就是一个很有价值的贡献，在当下并没有得到广泛的认可，该用户的声望也没有提高，但过了一段时间，大家逐渐关注并认可该用户的贡献后，他的声望也就随之变高。这意味着，即使一个用户的贡献在当下没有得到认可和奖励，也可能随着时间推移，在其他时期获得相应的认可和奖励。这是对此类贡献的补偿机制。\\
 除了经济奖励（分发流通通证）外，还可以设置荣誉奖励。\\
 
-没有获得和不给予其他用户认可的用户\\
-能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可度，会造成严重后果吗？\\
-因有些原因没有获得足够的认可的用户，其声望可能比“同流合污”的“水军”低吗？\\
-是否应该以某种机制减缓优势的聚集和流失（过度倾斜形成垄断）？\\
+能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可度，会造成严重后果吗？出于某些原因没有获得足够的认可的用户，其声望一可能比“同流合污”的“水军”还低吗？是否应该设计某种机制，以减缓优势的聚集和流失，防止声望过度倾斜，垄断奖励？\\
 
 声望的计算是否应该用户对其他用户的否定（不认可）是否应该纳入声望的计算？如果考虑否定行为，它是否会武器化，用于降低他人的声望？如果否定行为不纳入声望的计算，用户的声望是否会与其实际贡献出现较大偏差？\\
 
-如果没有新的用户贡献被认可，声望的分布是否应该随着时间的流逝在用户之间逐渐平均？\\
+如果没有新的用户贡献被认可，声望的分布是否应该随着时间的流逝在用户之间逐渐平均？如果曾经存在一批“大V”，因他们的贡献获得非常高的声望，并且得到奖励。随着时间推移，这群“大V”逐渐“泯然众人”，那么在这个过程中，他的可以得到的奖励也应该逐渐与众人持平，即使用户之间的认可没有太大的变化。否则，声望将不能体现近期的贡献，而曾经的贡献将会持续获得奖励。\\
 
 新用户如何进入声望系统？\\
 如何不使开通新账户、多开账户的行为得到声望激励？\\
