--- a/g.series/topics/gnews.prestige.token.org
+++ b/g.series/topics/gnews.prestige.token.org
@@ -1,12 +1,14 @@
+#+Title:Gnews平台激励机制之构思(draft)
+#+Author:KURORO(@ydche3/澈澈澈#1106)
 应该鼓励用户哪些行为，拒绝哪些行为？如何对用户进行激励？\\
 鼓励作者提供优质的原创内容，鼓励读者积极参与讨论并发表更有价值的评论（点赞、转发、收藏）。拒绝作者提供低质量内容，拒绝读者低价值、无意义、影响观感的“水军”行为。\\
 共产/公社模型不可行，直接的市场模型也不可行，必须根据用户贡献进行奖励。如果某用户的行为得到其他用户的广泛认可，那么该行为至少具有阶段性贡献。用户得到的认可越多（声望越高），表明其对社区的贡献越大，得到的奖励应该越多。所以，可以发行一种流通通证，根据用户的声望进行奖励——声望高者奖励多。\\
 
 如何定义声望？\\
-声望代表用户对社区的贡献，由其他用户对该用户的认可（点赞、评论、转发、收藏、关注等）决定：\\
-1. 如果用户得到广泛的认可（被大量用户关注，文章被大量点赞、收藏、转发，评论被大量点赞、回复），那么该用户的声望应该比较高。
-2. 如果用户得到平台“大V”的认可，那么该用户的声望也比较高。
-3. 如果用户得到平台“大V”的唯一关注，（相比作为被该“大V”关注的用户之一，）声望要更高。
+声望代表用户对社区的贡献，由其他用户对该用户的认可（点赞、评论、转发、收藏、关注等）决定：
+- 如果用户得到广泛的认可（被大量用户关注，文章被大量点赞、收藏、转发，评论被大量点赞、回复），那么该用户的声望应该比较高。\\
+- 如果用户得到平台“大V”的唯一关注，（相比作为被该“大V”关注的用户之一，）声望要更高。\\
+- 如果用户得到平台“大V”的认可，那么该用户的声望也比较高。\\
 
 如何计算声望？\\
 假设声望通过用户之间的认可进行传递(1,2)，并且用户的认可所传递的声望值，与他对外所做认可的行为总量（出量）有关，出度越大，每次认可所传递的声望就越少(3)。\\
@@ -14,18 +16,42 @@
 \begin{equation}
 P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 \end{equation}
-其中，\(r(i,j)\)为用户\(j\)对用户\(i\)的认可度，\(o(j)\)为用户\(j\)的对外总认可度。认可度根据用户的认可行为计算，不同的认可行为提供不同的认可度。例如：点赞提供1认可度，评论或回复提供10认可度等。\\
+其中，\(r(i,j)\)为用户\(j\)对用户\(i\)的认可度，\(o(j)\)为用户\(j\)的对外总认可度。认可度根据用户的认可行为计算，不同的认可行为提供不同的认可度。例如：点赞提供1认可度，评论或回复提供10认可度等。用户对自己的认可行为不会传递声望，即\(r(i,i)\equiv 0\).\\
+迭代法求解。定期更新。\\
 声望初值如何确定？是否会影响收敛结果？\\
+创建之初，每个用户账号的声望应该相同。\\
+声望总量是否固定？用户的声望是否存在上下限？\\
+
+模型的直接效果有哪些？\\
+自己的声望只来源于其他用户的认可，激励创作者提供更受认可的内容，激励读者发布更受认可的评论（包括点赞、转发等行为）。同时，由于不能得到其他用户的认可，“水军”行为和低质量创作不会带来任何声望的增长，也就实现了对此类行为的拒绝，防止用户“灌水”。\\
+声望会呈现“自发衰减”的趋势。\\
 
 声望通过用户之间的认可传递的依据是什么？认可行为会为被认可用户的声望背书，换言之，因为“大V”的声望高，，受“大V”认可的用户，在一定程度上也会因此受到其他用户的（非直接）认可。因此，认可的行为可以传递声望。\\
 
-为什么声望值不通过认可行为永久交付？声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。同时，认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下，社区可以发行声望？\\
+为什么声望值不通过认可行为一次性转移、永久交付？声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。同时，认可行为可撤销，当认可行为撤销时，用户向被认可用户传递的这部分声望应该“回收”。并且声望需要有自然衰减机制，保证声望永远表示最近时期的用户贡献，保证奖励发放“不重不遗”。并且永久交付还需要解决声望通证的一系列，社区的总声望是固定的，还是变化的？固定的就是加直接的零和模型，很可能导致用户的认可行为大大减少。变化的就需要解决发行问题——什么情况下平台可以发行声望？一次性转移的模型还会造成负面影响——用户之间的认可行为紧缩。因为这是一个零和模型，用户对外的认可多，自己的声望就少，进而导致得到的奖励也少，所以会导致用户倾向于不对其他用户的进行认可。\\
 
-不活跃的用户声望会逐渐降低，合理吗？一个用户曾经对社区贡献很大，声望很高，但随着时间的推移，声望逐渐下降，这会导致老用户的流失吗？\\
-合理。声望不是对贡献的奖励，而是对贡献的认定。社区根据声望阶段性地进行奖励，对于曾经有过大贡献，获得高声望的用户，已经在当下就获得了奖励。也就是说，即使某用户不活跃了，他的声望下降了，也不会影响他获得应有的奖励。声望应该是一个动态的量，它总表示最近一段时间用户的贡献。所以只有持续不断地提供贡献，才能维持或提高声望。这非常符合现实——爱因斯坦为科学作出了非常大的贡献，他的贡献已经在过去就得到了认可和奖励，在当时他也因此获得了很大的声望，但今天我们不会说他声望高。我们会说郭文贵先生具有很高的声望，因为他在灭共、建立NFSC、发动爆料革命、创立G系列等事情中作出了极大的贡献。所以，声望表示的最近或长或短的一段时期用户的贡献，而过去的贡献为该用户带来的声望，会随着时间衰减，衰减的速率取决于新贡献爆发的速率和过去贡献的持续性。如果一个用户的贡献是阶段性的，那么当下他的声望可能很高，但随着时间推移，如果他没有其他贡献，声望自然逐渐衰减。如果一个用户的贡献具有持久性，里程碑意义，那么即使他的活跃度逐渐下降，没有其他贡献，只要还收益于他的贡献，许多用户还是会保持对他的认可，所以虽然他的声望会衰减，但下降的速率会更慢。甚至会出现另一种情况，就是一个很有价值的贡献，在当下并没有得到广泛的认可，该用户的声望也没有提高，但过了一段时间，大家逐渐关注并认可该用户的贡献后，他的声望也就随之变高。这意味着，即使一个用户的贡献在当下没有得到认可和奖励，也可能随着时间推移，在其他时期获得相应的认可和奖励。这是对此类贡献的补偿机制。\\
+声望是否可以转账、支付和交易？\\
+不可以。声望是用户对社区的贡献的计量，本质上不是一种通货，所以声望的拥有者不能通过转账、支付和交易行为将声望转移给其他用户。声望的转移只能通过用户之间的认可，但根据声望给予用户的经济奖励和授予用户的荣誉（勋章），则可以在用户之间流通。\\
+一个现实例子——诺贝尔奖。诺贝尔奖得主的名头，是类似声望的通证，表示诺贝尔奖对得主贡献的认可，可以一定程度反映得主的贡献，它无法通过转账、支付和交易等经济行为在不同人之间转移。而授予诺贝尔奖得主的奖章（荣誉勋章）和给予他的奖金（经济奖励），则可以进行支付、交易等行为。\\
+
+由于其他用户的认可并不能给自己增加声望，“水军”行为不能给自己带来任何“收益”，所以用户不会倾向于“过度”地行动。然而，用户是否会为了不增加其他用户的声望，而倾向于不对其他人的行为进行认可，最终导致用户在平台上的认可行为紧缩？\\
+每个用户的声望均被其他用户“瓜分”，只要他对其他用户有过任何认可。\\
+
+不活跃的用户声望会逐渐降低，合理吗？\\
+合理。声望不是对贡献的奖励，而是对贡献的认定。声望是一个动态的量，它总表示最近一段时间用户的贡献。所以只有持续不断地提供贡献，才能维持或提高声望。\\
+这非常符合现实——爱因斯坦为科学作出了非常大的贡献，他的贡献已经在过去就得到了认可和奖励，在当时他也因此获得了很大的声望，但今天我们不会说他声望高。我们会说郭文贵先生具有很高的声望，因为他为灭共、建立NFSC、发动爆料革命、创立G系列做出了极大的贡献。所以，声望表示的最近或长或短的一段时期用户的贡献，而过去的贡献为该用户带来的声望，会随着时间衰减，衰减的速率取决于新贡献爆发的速率和过去贡献的持续性。如果一个用户的贡献是阶段性的，那么当下他的声望可能很高，但随着时间推移，如果他没有其他贡献，声望自然逐渐衰减。如果一个用户的贡献具有持久性，里程碑意义，那么即使他的活跃度逐渐下降，没有持续的贡献，许多用户还是会保持对他的认可，所以他的声望会衰减得更慢。同时，如果社区的创造力被充分释放，越来越多有价值的贡献陆续爆发，那么通体而言，不活跃用户的声望下降会更快。\\
+
+一个用户曾经对社区贡献很大，声望很高，但随着时间的推移，声望逐渐下降，这对该用户公平吗？\\
+社区根据声望阶段性地进行奖励，对于曾经有过大贡献，获得高声望的用户，已经在当下就获得了奖励。也就是说，即使某用户不活跃了，他的声望下降了，也不会影响他获得应有的奖励。而且，既然奖励是根据声望阶段性地发放的，那么声望就应该具有“自发衰减”的特点，以保证它总是能比较合理地表示现阶段用户的贡献，否则就会对过去的贡献反复进行奖励，这对后继贡献者不公平。\\
+
+还需要注意一种情况——一个很有价值的贡献，在当下并没有得到广泛的认可，该用户的声望也没有提高，但过了一段时间，大家逐渐关注并认可该用户的贡献后，他的声望也就随之变高。这意味着，即使一个用户的贡献在当下没有得到认可和奖励，也可能随着时间推移，在其他时期获得相应的认可和奖励。这是对此类贡献的补偿机制。\\
 除了经济奖励（分发流通通证）外，还可以设置荣誉奖励。\\
+如果对于一直没有得到广泛关注和认可的贡献，很可能该用户始终不能得到奖励，这有可能导致隐藏的创造力逐渐流失。如何设计一种机制，用于这种贡献的激励？\\
 
-能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可度，会造成严重后果吗？出于某些原因没有获得足够的认可的用户，其声望一可能比“同流合污”的“水军”还低吗？是否应该设计某种机制，以减缓优势的聚集和流失，防止声望过度倾斜，垄断奖励？\\
+如果一个用户从不认可他人，那么声望最终会向他聚集吗？\\
+能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可（类似广告），会造成严重后果吗？出于某些原因没有获得足够的认可的用户，其声望一可能比“同流合污”的“水军”还低吗？是否应该设计某种机制，以减缓优势的聚集和流失，防止声望过度倾斜，垄断奖励？\\
+当用户声望高的时候，并且对外总认可度\(o(i)\)较低时，他就可以以类似广告的方式“出售”自己的认可度，以帮助买家提高声望。声望高而对外总认可度低的用户，可以在获得平台奖励之后，出售他的认可以获取利益。那么这些用户有多大的动机这样做？这样的行为可能对社区造成哪些影响？\\
+“高进低出”的用户出售认可度的行为，对自己的声望会有直接和间接的影响——首先自己的认可。
 
 声望的计算是否应该用户对其他用户的否定（不认可）是否应该纳入声望的计算？如果考虑否定行为，它是否会武器化，用于降低他人的声望？如果否定行为不纳入声望的计算，用户的声望是否会与其实际贡献出现较大偏差？\\
 
@@ -39,3 +65,7 @@ P(i)=\sum P(j)\frac{r(i,j)}{o(j)}
 如何激励那些没有得到广泛关注和认可的贡献？用户对社区的贡献越大，越有可能得到广泛的认可，声望就越高。所以，用户声望就越大，表明他的行为和提供的内容越受认可，表明他对社区的贡献越大。反之不亦然。有可能存在一些有贡献的内容和行为并不能得到广泛的关注和认可，对于提供这类内容和行为的用户，我们希望仍然可以给他们奖励，以对他们形成激励。\\
 
 此设计的优点在哪里？缺点是什么？\\
+
+将贡献计算与奖励、流通性质切割，由另外一种独立发行的通证承担流通的功能，作为奖励。\\
+
+机制是否激励孤立的“小群体”成员用户之间“同流合污”、“抱团取暖”的行为？是否实现了不激励“水军”行为的目的？
