--- a/g.series/topics/gnews.prestige.token.org
+++ b/g.series/topics/gnews.prestige.token.org
@@ -1,18 +1,17 @@
-#+Title:Gnews改进提案———基于声望的激励机制，旨在奖励平台的贡献者(draft)
+#+Title:Gnews改进提案：基于声望的激励机制，旨在奖励平台的贡献者
 #+Author:KURORO
-* 导言(draft)
-声望通证(prestige token)
-应该鼓励用户哪些行为，拒绝哪些行为？如何对用户进行激励？\\
-鼓励作者提供优质的原创内容，鼓励读者积极参与讨论并发表更有价值的评论（点赞、转发、收藏）。拒绝作者提供低质量内容，拒绝读者低价值、无意义、影响观感的“水军”行为。\\
-共产/公社模型不可行，直接的市场模型也不可行，必须根据用户贡献进行奖励。如果某用户的行为得到其他用户的广泛认可，那么该行为至少具有阶段性贡献。用户得到的认可越多（声望越高），表明其对社区的贡献越大，得到的奖励应该越多。所以，可以发行一种流通通证，根据用户的声望进行奖励——声望高者奖励多。
-根据行为分配奖励vs根据贡献分配奖励vs根据市场分配奖励vs...\\
-PoW vs PoC(Proof of Contribution) vs Po?\\
-使用即价值如何解读？
-* 1 动议
+* 导言
+现阶段Gnews平台面临用户激励和治理的困难，主要源于激励机制的设计过于简单。直接奖励用户行为的机制，无疑会招致用户的低价值、无意义、影响观感的“灌水”行为。所以，直接奖励用户行为的方式不可行，必须根据用户对平台的贡献发放奖励。\\
+\\
+要实现根据用户的贡献发放奖励，就需要解决两个核心问题：
+1. 如何计算用户的贡献量？
+2. 如何根据贡献量发放奖励？
+本提案提供了一种基于声望的激励机制作为上述问题的解决方案：通过声望机制计算用户的贡献量，并阶段性地增发通证作为奖励。此外，该解决方案还为“使用即价值”的理念提供了新的实践思路。
+* 改进提议
 我想为Gnews团队提供如下建议，并借此文深入探讨激励机制的新方案：\\
 \\
 Gnews应该抛弃现阶段基于用户行为发放奖励的激励机制，采用基于用户获得的声望发放奖励的新机制：声望随着用户之间的互相认可发生“转移”，只有对平台和社群有价值、有贡献的行为，才能得到用户广泛关注和认可，声望才能维持或提高。所以，声望可以表示一个用户对平台和社群的贡献。基于声望发放奖励（声望高者奖励多）可以实现对贡献者的激励，同时不使低价值、无意义的行为得到奖励。
-** 1.1 声望的定义与计算
+** 声望的定义与计算
 声望代表用户对社区的贡献，由其他用户对该用户的认可（点赞、评论、转发、收藏、关注等）决定：
 - 如果用户得到广泛的认可（被大量用户关注，文章被大量点赞、收藏、转发，评论被大量点赞、回复），那么该用户的声望应该比较高。
 - 如果用户得到平台“声望大V”的认可，那么该用户的声望也比较高。
@@ -41,106 +40,99 @@ P_{m+1}=R_kP_m
 同时，为了使用户看到的声望值更加直观，迭代结束后需要对结果进行乘数扩大，保证\(||P||=N\)，即用户声望的平均值保持为\(1\). 对于刚进入平台的新用户，他们的初始声望为\(0\)。\\
 \\
 为了后续讨论的方便，暂且将Gnews声望通证称为GPT，即Gnews Prestige Token。
-** 1.2 奖励的发行与分配
-Gnews团队可以发行一种在平台内部流通的通证，并以此通证平台贡献者的奖励（姑且称发行的通证为GNC - Gnews Coin，其通证经济模型将在后文讨论）。Gnews团队可以根据平台的使用情况，在认为合适时间增发GNC，并将新发行的GNC大部分作为用户奖励，每个用户获得的奖励正比于自己的声望，剩余部分则作为收益归Gnews团队所有。
-** 1.3 防止无意义的用户行为得到奖励
+** 奖励的发行与分配
+Gnews团队可以发行一种在平台内部流通的通证，并以此通证平台贡献者的奖励（姑且称发行的通证为GNC - Gnews Coin，后文将简单讨论其通证经济模型）。Gnews团队可以根据平台的使用情况，在认为合适时间增发GNC，并将新发行的GNC大部分作为用户奖励，每个用户获得的奖励正比于自己的声望，剩余部分则作为平台收益归Gnews团队所有。
+** 防止无意义的用户行为得到奖励
 上述建议的优点在于，它能防止用户通过无意义、无价值、不被认可的“水军”行为获得奖励，因而既能减少Gnews平台中低质量、影响观感的用行为，又能激励高质量、有价值的用户行为。所以，基于声望分发奖励比基于用户行为分发奖励要更加利于平台和用户社群的发展。\\
 上述方案的意图在于，只要某用户试图采用不被认可的行为牟取奖励，就注定失败。不过，只要该用户及时停止胡作非为，为平台和社群提供更多有价值的贡献，他也能够获得相应的奖励。\\
 上述方案可以很好地适配Gnews平台的功能，但会引出一系列需要充分讨论的问题，不过最终结论是，上述方案可以很好地解决现阶段的困难，并且没有引入明显的漏洞。
-* 2 概括提案背后的构思
+* 概括提案背后的构思
 直接奖励用户行为的模式存在严重漏洞，因为相同的行为可以具有不同的价值、贡献，直接以固定积分奖励用户的行为，会导致用户都倾向于采用低成本的方式“刷”奖励，即出现大量影响观感的“水军”行为。考虑到Gnews平台更加希望鼓励作者提供优质原创内容，鼓励读者积极参与讨论并发表有价值的评论（点赞、转发、收藏），而不是鼓励作者提供低质量内容和读者低价值、无意义、影响观感的“水军”行为。所以，现阶段直接根据用户行为进行奖励的模型不可行，而一种更加公平可行、更有利于平台和用户社群的模式，就是基于用户的贡献进行奖励。\\
 \\
 如果某用户的行为得到其他用户的广泛认可，那么该行为至少具有阶段性的贡献。用户得到的认可越多，表明其对社区的贡献越大，得到的奖励也应该越多。所以，上述方案以声望来代表用户对平台和社群的贡献，同时发行一种流通通证，根据用户的声望进行奖励，声望高者奖励多。
-* 3 现有困难及其解决
+* 简述现有困难及其解决
 现阶段的Gnews激励机制面临的困难是，无法有效区分不同价值的用户行为，导致用户倾向于采用低价值的方式（即“灌水”）获得奖励。\\
 \\
-在基于声望分配奖励的方案中，用户的声望只能来源于其他用户的认可，这就激励创作者提供更受认可的内容，激励读者发布更受认可的评论，以及合理地进行点赞、转发等。因为低价值的行为无法获得认可，“水军”行为和低质量创作就不会带来任何奖励，也就不会有大量用户“灌水”。，因而可以保持Gnews平台的良好观感。而且，完全躺平、不为平台提供任何贡献的用户也无法获得奖励。最后，由于任何新用户的声望初始值都是\(0\)，确保了用户无法通过开通新账号的方式牟取奖励。
-* 4 声望机制的底层逻辑
-** 4.1 声望为什么可以通过用户之间的认可发生传递
+在基于声望分配奖励的方案中，用户的声望只能来源于其他用户的认可，这就激励创作者提供更受认可的内容，激励读者发布更受认可的评论，以及合理地进行点赞、转发等。因为低价值的行为无法获得认可，“水军”行为和低质量创作就不会带来任何奖励，也就不会有大量用户“灌水”。，因而可以保持Gnews平台的良好观感。而且，完全躺平、不为平台提供任何贡献的用户也无法获得奖励。最后，由于任何新用户的声望初始值都是\(0\)，确保了用户无法通过开通多个新账号的方式牟取奖励。
+* 声望机制的底层逻辑
+** 声望为什么可以通过用户之间的认可发生传递
 本质上，认可是其他用户对该用户贡献的背书，而声望作为用户贡献的表征，自然可以通过用户之间的背书进行传递。
-** 4.2 声望为什么不通过认可行为永久地转移
+** 声望为什么不通过认可行为永久地转移
 声望的传递应该具有永续性——当我的声望高了，被我认可的用户声望也应该水涨船高。因为在我的主页可以看到所有被我认可的内容和用户，所以声望的传递应该是持续的。同时，认可行为可以撤销，如取消点赞、删除评论。当认可撤销时，用户向被认可用户传递的这部分声望应该“回收”。上述方案的声望方程可以实现以上效果，而声望通过认可发生一次性、永久转移的方式则不能。\\
 \\
 永久转移还需要解决一系列问题：所有用户的总声望是恒定的，还是变化的？\\
 如果总声望是恒定的，用户对外的认可多，自己的声望就少，进而导致得到的奖励也少，因此用户之间需要进行零和博弈，导致用户倾向于不对其他用户的进行认可，这显然不是我们希望的。如果总声望是变化的，则需要设计完善的声望的增长机制。
-** 4.3 声望是否可以转账、支付和交易
+** 声望是否可以转账、支付和交易
 不可以。声望是用户对平台和用户社群的贡献的计量，本质上不是一种通货，所以声望的拥有者不能通过转账、支付和交易行为将声望转移给其他用户。声望的转移只能通过用户之间的认可，但根据声望给予用户的经济奖励和授予用户的荣誉奖章，则可以在用户之间自由流通。\\
 以诺贝尔奖为例，诺贝尔奖得主的荣誉，是类似声望的通证，表示诺贝尔奖对得主贡献的认可，可以一定程度反映得主的贡献，它无法通过转账、支付和交易等经济行为在不同人之间转移，永远属于该奖得主。而授予诺贝尔奖得主的奖章和给予他的奖金（经济奖励），则可以进行支付、交易等行为。
-* 5 声望的衰减效应
+** 为什么不能通过否认行为传递负声望
+如果将用户的否认行为纳入声望的计算，即用户之间的否认行为会传递负声望，使被否认用户的声望下降，就很可能导致否认行为被武器化。用户为了提高自己获得的奖励，就可能利用否认行为不合理地削减其他用户的声望。为了防止否认行为被武器化的情况发生，否认行为不纳入声望的计算。\\
+后续讨论中我们将看到，事实上无需将否认行为纳入计算，声望就已经具备随着用户的活动逐渐向贡献者汇聚的效应。
+* 声望的衰减效应
 随着Gnews用户的活动，每\(1\)认可度所传递的声望会逐渐稀释，意味着如果用户不能持续获得其他用户的认可，他的声望通常就会逐渐下降。换言之，用户的声望会呈现“自发衰减”的趋势，这就是声望的衰减效应。
-** 5.1 衰减效应的合理性
+** 衰减效应的合理性
 需要强调，声望不是对贡献的奖励，而是对贡献的认定。由于奖励总是通过阶段性增发GNC实现，所以声望必须是一个动态的量，它总表示最近阶段用户的贡献，才能保证奖励不会重复地发放给曾经已经获得奖励的那些贡献。所以，只有持续不断地提供贡献，才能维持或提高声望，进而持续获得奖励，这非常符合逻辑。\\
 这也非常符合现实，以爱因斯坦为例，他为科学作出了非常大的贡献，而他的贡献已经在过去就得到了认可和奖励，在当时他也因此获得了很大的声望，但今天我们不会说他声望高。我们会说郭文贵先生具有很高的声望，因为他为灭共、建立NFSC、发动爆料革命、创立G系列做出了极大的贡献。\\
 \\
 所以，声望表示的最近或长或短的一段时期用户的贡献，而过去的贡献为该用户带来的声望，会随着时间衰减。声望衰减的速率取决于新贡献爆发的速率和过去贡献的持续性。如果一个用户的贡献是阶段性的，那么当下他的声望可能很高，但随着时间推移，如果他没有其他贡献，声望自然逐渐衰减。如果一个用户的贡献具有持久性，那么即使他的活跃度逐渐下降，没有持续的贡献，许多用户还是会保持对他的认可，所以他的声望会衰减得更慢。同时，如果平台和社群的创造力被充分释放，越来越多有价值的贡献陆续爆发，不活跃用户的声望下降会更快。
-** 5.2 衰减效应保证奖励机制的公平性
+** 衰减效应保证奖励机制的公平性
 Gnews平台总是阶段性地进行奖励，对于曾经有过大贡献，获得高声望的用户，在当下就已经获得了相应的奖励。也就是说，即使某用户不活跃了，他的声望下降了，也不会影响他获得应有的奖励。而且，既然奖励是根据声望阶段性地发放的，那么声望就应该具有“自发衰减”的特点，以保证它总是能比较合理地表示现阶段用户的贡献，否则就会对过去的贡献反复进行奖励，这对后继贡献者不公平。
-** 5.3 衰减效应的本质
+** 衰减效应的本质
 注意一种情况，某用户提供了一个很有价值的贡献，但在当下并没有得到广泛的认可，导致该用户的声望也没有提高，这种贡献就称为沉默贡献。随着时间推移，沉默贡献可能会逐渐得到关注和认可，该用户的声望也就随之变高。这意味着，即使一个用户的贡献在当下没有得到认可和奖励，也可能在其他时期获得相应的认可和奖励。换言之，声望总是能够通过用户的认可，向平台和社群的贡献者汇聚，这种宏观汇聚效应的微观体现，就是所谓的衰减效应。所以，声望的衰减效应表明了它会随着用户的行为，自发地向贡献者转移，这恰恰是我们所希望的。
-* 声望的“迭代损耗”效应是否会被利用
-创建之初，每个用户账号的声望应该相同。只要满足所有用户的声望初值是相同的，就不会影响迭代结果。\\
-声望总量是否固定？\\
-迭代过程中总量很可能不固定。因为存在“单向”用户（只接受认可而不认可其他用户，或只认可其他用户而没有得到认可）和“僵尸”用户（没有认可其他用户，也没有得到其他用户的认可），迭代过程中，不对外认可的用户，无论是否受到认可，赋予他的声望总是在下一次迭代中“丢失”。以至于经过多次迭代后，用户声望总量一定会下降。\\
-声望的“丢失”有什么影响吗？\\
-不影响本质。在微观尺度（单个用户的角度），声望是表征该用户对生态的贡献（由其他用户的认可从社区网络的层面
-用户的声望是否存在上下限？
+* 不会再有“灌水”行为
+既然声望总是随着用户之间的认可，逐渐向平台和用户社群的贡献者汇聚，“灌水”行为总不能获得或维持声望，那么在基于声望的激励机制中，就不会再有明显地用户“灌水”现象。意味着，现阶段Gnews平台中的大部分“灌水”用户，要么调整自己的策略，积极地向平台和用户社群提供贡献；要么只能逐渐归于沉寂，不再活跃。
+** 用户无法“同流合污”
+单打独斗的“灌水”行为，已经无法获得奖励，那么“灌水”用户能否“同流合污”，形成一支“水军”队伍，以此牟取奖励？这依旧无法得逞。因为声望总是在用户当前声望的基础上进行迭代，所以“灌水”用户的声望本来就低，而且会越来越低。即使大量“灌水”用户纠集成“水军”，也无法通过相互认可提高自己的声望，因而也就无法提高各自获得的奖励，所以即便有用户“同流合污”，也不会损害其他用户的声望和奖励。
+** 多账号的用户无法作弊
+Gnews现阶段的激励机制是根据用户的行为给予奖励，有能力注册并维持多账号的用户，就可以利用多个账号进行作弊。只需要在多个账号之间进行频繁地评论、转发，就可以轻而易举地获得大量的奖励。\\
+\\
+而在基于声望的激励机制中，即使某用户维持多个账号，只要这些账号对平台和用户社群没有贡献，就只能维持非常低的声望，因此该用户无法利用多个账号获得更多的奖励，即无法利用多账号进行作弊。并且，由于账号注册之初声望值为\(0\)，所以注册和维持多个账号并没有任何优势，因而除非有必要，否则用户不会倾向于注册多个账号。
+*  奖励机制的底层逻辑
+** 根据声望发放奖励的合理性
+声望总是随着用户的活动，逐渐向平台的贡献者汇集，所以声望可以很大程度表征用户的贡献。根据声望发放奖励的目的是，使奖励更大程度地给予平台和社群的贡献者。本质上，根据声望发放奖励，就是奖励那些得到用户社群广泛关注和认可的行为。背后的逻辑是，被广泛关注和认可的行为的贡献，通常比没有得到广泛关注和认可的行为的贡献更高。因为一个拥有大量用户的社群的意见，通常比少数人的意见更靠谱。
+** 阶段性发放奖励的合理性
+平台的发展和用户社群的贡献具有阶段性，奖励的发放也应该与平台发展阶段和用户社群的贡献情况保持适配。\\
+考虑一种情况，某用户的贡献与同时期的其他用户相比平平无奇，但仍然大于历史上的某些“声望大V”。在用户社群创造力爆发的时期，该用户的声望很可能低于历史上“大V”当时的声望。换言之，该用户分配到的奖励占比，会低于历史上的“大V”曾经得到奖励的占比，这是否会造成不公平？\\
+根据前文讨论可知，声望表征的是贡献的横向分布，即现阶段用户贡献的分布，而无法表征贡献的纵向分布，即贡献随着时间的分布。换言之，它可以决定现阶段奖励的分配，而不能决定平台发展中不同时期的奖励的分配。所以，奖励必须阶段性地发放，每个阶段发放的奖励并不固定，而是根据当前平台的使用情况确定。在创造力爆发的时期，用户贡献的总价值高，发放奖励的总价值也相应高，这保证了高价值的贡献总能获得更高的奖励。
+** 根据平台使用情况增发GNC的合理性
+目前Gnews平台直接奖励用户行为的模式，本质就是根据平台是使用情况增发积分，这是对“使用即价值”理念的实践探索。然而，这种增发模式显然已经导致了积分“贬值”，因为无意义、低价值的使用也参与了积分的增发。显然，使用即价值的理念必须建立在合理使用的前提下，并非任何使用都具备价值。例如，使用Gnews平台传播虚假信息显然不能具备价值，甚至会造成不良影响。\\
+在基于声望发放奖励的模型中，声望机制确保了对平台和用户社群无价值、无意义的行为无法得到奖励，因而可以很大程度降低甚至杜绝无价值的使用。换言之，声望机制保证了平台的使用适度且具有价值。在此前提下，根据平台使用情况增发奖励就非常合理了。
+*  用户将选择哪些行为
+** 适度地使用平台
+用户对平台的使用不一定能为自己提高声望，但却会导致GNC的增发。如果某用户只提供了使用量而没为平台贡献价值，增发的GNC就更多地奖励给了其他用户。换言之，该用户在平台投入的时间就做了他人的嫁衣。因此，为了保证自己的收益，用户会倾向于适度地使用平台，而非过度地进行非必要活动。
+** 提供更有价值的贡献
+用户必须尽可能使自己在平台上的使用具有价值，才能获得更多的认可。创作者必须提供更加有价值的内容，读者必须提供更加有价值的评论，为更有价值的内容点赞等。用户也更加倾向于以协作、和睦地方式进行交流，而非采取对抗的方式，因为互相协作的方式总能得到更多人的认可。并且绝大部分用户会倾向于停止“灌水”行为，因为“灌水”行为既没有价值，又影响观感，不可能得到其他用户的认可。
+** 合理地使用认可的权力
+在声望的计算过程中，用户当前的声望总是“瓜分”给其他用户，同时接受其他用户传递的声望，得到更新后的声望数值。如果过于随意地认可其他用户，自己的声望就可能流向贡献较低的用户，这会间接减损自己的奖励。同时，随意使用认可权力的行为必然不被其他用户广泛认可，因为大多数用户总是希望声望流向贡献者，以此保证自己的贡献也能得到相应的奖励，而不是被低贡献的用户分走奖励。所以，用户倾向于合理而非滥用认可的权力。\\
+类似地，过于拘谨地使用认可的权力同样会间接地减损自己的奖励。如果用户的声望总是流向少数几个“大V”用户，声望“回流”到自己身上的机会就会减少，长期的收益就会下降。所以，用户会倾向于不吝啬对其他用户的认可。\\
+\\
+一言蔽之，在声望的计算过程中，用户总是不得不将自己的声望传递给其他人，因此，用户必须合理地使用自己的认可权，否则会损害自己和用户社群的长远利益。
+*  比中心化管理更好的秩序
+中心化的管理模式需要Gnews团队投入大量的成本，对用户的行为进行监管，对用户提供的内容进行审查。而声望机制则成功地将用户贡献的认定和用户行为的监督的工作交托给用户社群，实现了用户社群的自我治理和贡献认定。既实现了更好的治理效果，又将Gnews团队从繁杂的管理工作中释放，可以更多地投入开发、运营等工作当中。\\
+\\
+用户有了认可的权力，就能参与到用户社群的共识构建、贡献认定和生态治理当中。用户既是监督者，也是被监督者，在监督其他用户行为的同时，也需要规范自己的行为，才能获得认可。用户既能认定其他用户的贡献，其他用户也认定他的贡献，在认定其他用户贡献的同时，也需要提供更有价值的贡献，才能获得认可。而且，用户需要合理地使用自己的认可权力，否则也不能得到其他用户认可。
+*  尚待讨论的话题
+** 对沉默贡献的激励机制
+如何激励那些没有得到广泛关注和认可的沉默贡献？\\
+\\
+用户对社区的贡献越大，越有可能得到广泛的认可，声望就越高。所以，用户声望就越大，表明他的行为和提供的内容越受认可，表明他对社区的贡献越大。反之却不亦然，有可能存在没有得到广泛关注和认可的贡献。对于提供沉默贡献的用户，我们仍然希望可以给他奖励，以对具有潜在价值的用户行为形成激励。
+** 荣誉激励
+本提案中充分讨论了基于用户声望的经济奖励模型，然而，一个完整的激励系统，除了经济激励外，还需要包含荣誉激励。
+** GNC的通证经济模型
+本提案尚未就通证GNC的经济模型展开讨论。此话题至少包含以下问题：
+1. 如何具体地根据平台使用情况发行GNC？
+2. 如何构建Gnews平台内部的GNC流通市场？用户是否可以提供付费业务？
+3. Gnews是否应该对每一笔GNC支付收取小额手续费用？
+4. 如何运用流支付保证用户之间的付费服务顺利展开？
+5. 如何构建GNC与其他数字货币的交易对？
+由于GNC的通证经济模型并非激励机制的核心，故本提案不进行深入讨论。\\
+\\
+\\
+\\
 
-机制是否激励孤立的“小群体”成员用户之间“同流合污”、“抱团取暖”的行为？\\
-同流合污的行为很可能存在。只要一个小群体保持相互认可，而不对群体外的成员进行认可，即使没有其他成员认可他们，他们每人的声望也可以保持在初值附近。相比之下，主流群体则因为声望计算过程中的“丢失”效应，群体总声望会下降。这就会导致小群体即使什么贡献都没有，也能拿到奖励，甚至会分走不低的奖励。换言之，这种效应将导致小群体同流合污，或者一个用户注册大量账号以瓜分奖励的行为。\\
-如果能设计某种机制，排除个人或小群体利用该效应作恶的可能，这种效应还会造成什么客观的影响？\\
-这个效应有可能导致声望体系存在多个相互孤立的子体系，子体系内的用户互相认可，但不对外给予认可，子体系外用户也不认可他们。在相互孤立的子体系内，还有可能存在若干个近似孤立的次体系——两个次体系之间的大部分成员是不同的，只存在少数跨次体系的成员。\\
-对于孤立体系而言，声望将是\\
-声望的“丢失”效应将鼓励用户至少保持对其他用户贡献最低程度的关注和认可，以避免声望计算的迭代过程中，自己声望被“浪费”，进而影响自己的最终“声望”。\\
-如何防止利用“丢失”效应作恶（小群体”同流合污“和用户多开账号“混”声望等“寄生”行为）？\\
-用户需要为自己的声望和行为负责——完全不对他人进行认可，声望就会在迭代的过程中“丢失”，这在体系内并不会对自己造成损失，但如果另有一个孤立体系，拥有更加健康的网络拓扑，则会造成自己的损失。过于随意地认可其他用户，会导致声望流向低贡献用户的趋势变大，这会直接损害自己的奖励。这也是该系统促进协作的重要一环——用户要认真处理自己的认可权，否则会直接损害自己和生态的利益。\\
-简单粗暴地只向主流用户群体发放奖励，而不考虑主流用户群体外的在体系，显然是不可接受的解决方案。相互独立的在体系，声望分别计算，奖励单独发放，本质上也没有解决困难（存在寄生型次体系）。而且奖励必须不能独立计算，否则就会导致用户倾向于不认可其他用户。一旦如此，自己所在的子空间的声望就会发生“丢失”，进而自己在整个网络声望分布中占比下降。所以，用户必须将自己的声望传递给其他用户。只要用户不得不将自己的声望传递给其他用户，他就必须非常认真谨慎地进行认可。一旦认可过于集中于一部分用户，优势就会向他们聚集，反之，一部分奖励可能被低贡献甚至无贡献的用户瓜分。没必要将声望模型再复杂化，而是引入治理模型。\\
-治理模型包括两个部分——自动化/智能算法和人为干预。自动化算法承担“免疫系统/机制”的作用，人为干预承担“医学干预/介入”的角色。前者负责监控和清除，后者负责处理超出前者监控和清除能力的问题。\\
-“寄生”用户的行为就如癌症一样，毫无贡献，却能得到奖励。如果这是“癌症”，那就应该诉诸“免疫系统”进行监控和清除，在发生“免疫逃逸”后，就需要诉诸“医学干预”。所以首先需要引入治理模型，加入“免疫系统”的设计，尽可能将诉诸“医学干预”的比例降到最低，再考虑将哪些情况归于“医学干预”。\\
-“监控”功能：认可矩阵可以化简为块对角矩阵，由此可以快速定位所有声望子体系。当子体系的认可矩阵出现某些特征时，就可以启动清除验证。\\
-寄生用户的行为会导致认可矩阵呈现哪些特征？\\
-清除功能：当“预警”发出，就进入验证，可以设置某些条件，满足即可直接清除用户本阶段的声望。\\
-对于不满足清楚条件的“可疑”子体系，则发出“预警”。\\
-“免疫系统”是通过某种抗原识别并清除体内的有害细胞的，所以可以考虑训练AI，通过识别某种“抗原”进行监控和清除。还可以模仿“免疫系统”的获得性免疫功能。\\
-AI可以与“免疫算法”相结合——免疫算法辅助AI训练，AI协助免疫算法工作。免疫算法属于自动化、被动治理的机制，AI可以补充自动化、主动治理，类似免疫系统的免疫细胞，共同构成“免疫系统”。\\
-同时还可以设计机制，让免疫算法和免疫AI根据网络情况释放“因子”，“因子”可以提示网络存在的问题，而团队可以进行人工干预、排查。\\
-免疫系统和医疗检查是持续发展的，而非“一劳永逸”。正如人类对抗疾病，总会有新的疾病产生，医学总要持续发展。\\
-团队开放声望系统的API，允许所有的用户自由使用平台用户声望数据，用于分析、创作等。这使所有用户可以协作，防止其他用户作恶，或优化生态的声望环境。\\
 
-防止利用声望“丢失”和“初值”机制作恶——新用户初值为0+声望累积迭代。
-* 不会再有
-新用户如何进入声望系统/体系？老用户创建多个账户的行为是否会得到声望激励？\\
-
-如何使新用户开通账号的行为得到声望激励，而用户多开账户的行为无法得到声望激励？
-* 用户行为紧缩
-由于其他用户的认可并不能给自己增加声望，“水军”行为不能给自己带来任何“收益”，所以用户不会倾向于“过度”地行动。然而，用户是否会为了不增加其他用户的声望，而倾向于不对其他人的行为进行认可，最终导致用户在平台上的认可行为紧缩？\\
-每个用户的声望均被其他用户“瓜分”，只要他对其他用户有过任何认可。\\
-* 用户将选择哪些行为
-* 防止某否认行为的武器化
-声望的计算是否应该用户对其他用户的否定（不认可）是否应该纳入声望的计算？如果考虑否定行为，它是否会武器化，用于降低他人的声望？如果否定行为不纳入声望的计算，用户的声望是否会与其实际贡献出现较大偏差？
-* 沉默贡献问题
-如何激励那些没有得到广泛关注和认可的贡献？用户对社区的贡献越大，越有可能得到广泛的认可，声望就越高。所以，用户声望就越大，表明他的行为和提供的内容越受认可，表明他对社区的贡献越大。反之不亦然。有可能存在一些有贡献的内容和行为并不能得到广泛的关注和认可，对于提供这类内容和行为的用户，我们希望仍然可以给他们奖励，以对他们形成激励。
-* 基于声望发放奖励的原理
-声望在宏观层面表征同时期用户贡献的分布，它可以决定现阶段奖励的分配。但声望表征的是贡献的横向分布，无法表征贡献的纵向分布，那么对于这种情况——某用户的贡献在同时期的社区中平平无奇，但仍然大于历史上的某些“大V”——在创造力爆发的时期，该用户在现阶段的声望很可能低于历史上“大V”当时的声望。换言之，该用户分配到的奖励占比，会低于历史上的“大V”曾经得到奖励的占比，这是否会造成不公平？这里的问题是——声望永远是现阶段用户贡献的分布（即贡献的横向分布），不能表征贡献的纵向分布，这是否导致不同时期相同价值的贡献被分配到不同价值的奖励？\\
-这个问题不是通过声望解决的，引入声望机制就是解决贡献的横向分布的问题，纵向分布纳入奖励的分配机制中解决。简言之，每个阶段发放的奖励并不是固定、相同的，而是根据当前阶段整个生态的发展确定的。在创造力爆发的时期，用户贡献的总价值高，发放奖励的总价值也相应高，这保证了高价值的贡献总能获得更高的奖励。
-* 比固定奖励更好的秩序
-如果一个用户从不认可他人，那么声望最终会向他聚集吗？\\
-能获得一定程度的认可，并且很少认可其他用户的用户很可能会聚集优势，如果他以某种方式“出售”自己的认可（类似广告），会造成严重后果吗？出于某些原因没有获得足够的认可的用户，其声望一可能比“同流合污”的“水军”还低吗？是否应该设计某种机制，以减缓优势的聚集和流失，防止声望过度倾斜，垄断奖励？\\
-当用户声望高的时候，并且对外总认可度\(o(i)\)较低时，他就可以以类似广告的方式“出售”自己的认可度，以帮助买家提高声望。声望高而对外总认可度低的用户，可以在获得平台奖励之后，出售他的认可以获取利益。那么这些用户有多大的动机这样做？这样的行为可能对社区造成哪些影响？\\
-“高进低出”的用户出售认可度的行为，对自己的声望会有直接和间接的影响——首先自己的认可。
-
-声望“零和”问题——促进协作还是抗争？\\
-微观的合作和竞争是存在的，但整体网络倾向协作而非抗争。\\
-用户素质将成为最终要的必要条件之一。机制的设计已经提供了最大程度的..，但如果用户的心智幼稚，不能协作，或是协作能力不足，都有可能造成问题。\\
-用户的利益与网络的利益相同。
-
-* 笺注
-将贡献计算与奖励、流通性质切割，由另外一种独立发行的通证承担流通的功能，作为奖励。\\
-
-声望表征用户受其他用户的认可程度，奖励根据声望方法，本质就是奖励得到用户广泛关注和认可的行为。\\
-补充逆主流的激励机制。
-
-如果对于一直没有得到广泛关注和认可的贡献，很可能该用户始终不能得到奖励，这有可能导致隐藏的创造力逐渐流失。如何设计一种机制，用于这种贡献的激励？
-除了经济奖励（分发流通通证）外，还可以设置荣誉奖励。
-
-本提案遵循[[https://creativecommons.org/licenses/by/4.0/][CC BY 4.0]]协议。\\
-联系作者：澈澈澈#1106(Didscord), @ydche3(Gettr/Gnews).
+协议：\\
+[[https://creativecommons.org/licenses/by/4.0/][CC BY 4.0]]\\
+\\
+联系方式：\\
+澈澈澈#1106(Didscord), @ydche3(Gettr/Gnews).
