--- a/g.series/gip/proof.of.contribution.org
+++ b/g.series/gip/proof.of.contribution.org
@@ -1,17 +1,61 @@
-#+Title:Gnews改进提案：基于声望的激励机制，旨在奖励平台的贡献者
 #+Author:KURORO
-* 导言
-现阶段Gnews平台面临用户激励和治理的困难，主要源于激励机制的设计过于简单。直接奖励用户行为的机制，无疑会招致用户的低价值、无意义、影响观感的“灌水”行为。所以，直接奖励用户行为的方式不可行，必须根据用户对平台的贡献发放奖励。\\
+#+Title:Gnews改进提案：基于用户贡献的激励机制 1.0
+#+Date:<2023-02-13 Mon>
+* 导言(draft)
+使用即价值的实践
+现阶段Gnews平台面临用户激励和治理的困难，主要源于激励机制的设计过于简单。直接奖励用户行为(Action)的机制，无疑会招致用户的低价值、无意义、影响观感的“灌水”行为。所以，直接奖励用户行为的方式不可行，必须根据用户对平台的贡献(Contribution)发放奖励。\\
 \\
 要实现根据用户的贡献发放奖励，就需要解决两个核心问题：
 1. 如何计算用户的贡献量？
 2. 如何根据贡献量发放奖励？
-本提案提供了一种基于声望的激励机制作为上述问题的解决方案：通过声望机制计算用户的贡献量，并阶段性地增发通证作为奖励。此外，该解决方案还为“使用即价值”的理念提供了新的实践思路。
-* 改进提议
-我想为Gnews团队提供如下建议，并借此文深入探讨激励机制的新方案：\\
+本提案提供了一种基于声望(Prestige)的激励机制作为上述问题的解决方案：通过声望机制计算用户的贡献量，并阶段性地增发通证作为奖励。此外，该解决方案还为“使用即价值”的理念提供了新的实践思路。
+* 动议
+我想为Gnews团队提供如下行动建议，并借此文深入探讨激励机制的新方案：\\
 \\
-Gnews应该抛弃现阶段基于用户行为发放奖励的激励机制，采用基于用户获得的声望发放奖励的新机制：声望随着用户之间的互相认可发生“转移”，只有对平台和社群有价值、有贡献的行为，才能得到用户广泛关注和认可，声望才能维持或提高。所以，声望可以表示一个用户对平台和社群的贡献。基于声望发放奖励（声望高者奖励多）可以实现对贡献者的激励，同时不使低价值、无意义的行为得到奖励。
+Gnews应该抛弃现阶段基于用户行为发放奖励的激励机制，采用基于用户获得的贡献发放奖励的新机制：以用户的声望值表征该用户对平台和社群的贡献，奖励根据用户声望发放，声望高者奖励越多，以此实现对贡献者的激励。声望只能随着用户之间的认可(Recognization)行为（点赞、评论、转发、收藏等）发生“转移”，因而用户的行为必须对平台和社群有价值、有贡献，才能得到广泛的关注和认可，才能提高或维持声望，才能获得更多奖励。
 ** 声望的定义与计算
+用户的声望值代表该用户对平台和社群的贡献，根据其他用户对该用户的认可行为（点赞、评论、转发、收藏、关注等）计算。\\
+\\
+对任意用户\(i\),\(j\), 定义用户\(j\)对用户\(i\)的认可度为：
+\begin{equation} r(i,j) = \frac{\alpha_1 N_{like}(i,j) + \alpha_2 N_{comment}(i,j) + \alpha_3 N_{share}(i,j) + \alpha_4 N_{collect}(i,j) + \alpha_5 N_{follow}(i,j)}{\sum_{i} \alpha_1 N_{like}(i,j) + \alpha_2 N_{comment}(i,j) + \alpha_3 N_{share}(i,j) + \alpha_4 N_{collect}(i,j) + \alpha_5 N_{follow}(i,j)} \end{equation}
+其中，\(N_{action}(i,j)\)分别为用户\(j\)对用户\(i\)的点赞、评论、转发、收藏和关注行为数量，\(\alpha_n\)为不同的认可行为参与认可度计算的权重，\(\sum_n \alpha_n \equiv 1\). 规定用户对自己的认可行为不计算认可度，即\(r(i,i)\equiv 0\).\\
+\\
+定义用户\(i\)的声望值为：
+\begin{equation} P(i)=\beta \sum_j r(i,j)P(j) + (1-\beta) \frac{\sum_j P(j)}{M},    i,j \in [1,M],  \beta \in [0,1] \end{equation}
+其中，\(M\)为总用户数。根据定义，用户的声望由两部分构成：其他用户的认可行为传递给用户\(i\)的声望值\(\sum_j r(i,j)P(j)\)和平台所有用户的平均声望值\(\frac{\sum_j P(j)}{M}\)。\(\beta\)因子为两者权重，决定优势的积累效率：\(\beta\)因子越大，优势越容易积累和保持，反之则越难。\\
+\\
+将上述方程中所有用户的声望\(P(i)\)写成列向量：
+\begin{equation} P=\left( \begin{array}{c} P(1) \\ P(2) \\ \vdots \\ P(M) \end{array} \right) \end{equation}
+认可度\(r(i,j)\)写成矩阵：
+\begin{equation} R=\left( \begin{array}{cccc}  r(1,1) & r(1,2) & \cdots & r(1,M) \\ r(2,1) & r(2,2) & \cdots & r(2,M) \\ \vdots & \vdots & \ddots & \vdots \\ r(M,1) & r(M,2) & \cdots & r(M,M) \end{array} \right) \end{equation}
+上述方程写成：
+\begin{equation} P = \beta RP + (1-\beta) \frac{\sum_j P(j)}{M} \end{equation}
+令当前所有用户的声望初始值均为\(\frac{1}{M}\)，即\(P_0=(\frac{1}{M},\frac{1}{M},\cdots,\frac{1}{M})^\intercal\). 采用迭代法求解方程：
+\begin{equation} P_{n+1}=\beta RP_n + \frac{1-\beta}{M} \end{equation}
+对每次迭代结果进行归一化处理，即令\(\sum_j P(j)= 1\)，经过\(m\)次迭代后，\(P_m(i)\)即表示用户\(i\)当前的声望。\\
+\\
+由于矩阵\(R\)会随着用户的活动而变化，所以需要周期性地以用户当前的声望作为初始值继续迭代：
+\begin{equation}
+P_{m+1}=\beta R_kP_m + (1-\beta)
+\end{equation}
+其中\(R_k\)为变化后的矩阵。\\
+\\
+规定声望系统上线后，任何进入平台的新用户的初始声望均为\(0\)。
+** 奖励的计算与发放
+规定Gnews平台阶段性地发放某种通证作为奖励(Rewards)，默认该通证具有价值且可量化计算。\\
+对任意奖励阶段，假设发放的奖励通证总量为\(w\)，用户\(i\)将分配到
+Gnews团队可以发行一种在平台内部流通的通证，并以此通证平台贡献者的奖励（姑且称发行的通证为GNC - Gnews Coin，后文将简单讨论其通证经济模型）。Gnews团队可以根据平台的使用情况，在认为合适时间增发GNC，并将新发行的GNC大部分作为用户奖励，每个用户获得的奖励正比于自己的声望，剩余部分则作为平台收益归Gnews团队所有。
+** 防止无意义的用户行为得到奖励
+上述建议的优点在于，它能防止用户通过无意义、无价值、不被认可的“水军”行为获得奖励，因而既能减少Gnews平台中低质量、影响观感的用行为，又能激励高质量、有价值的用户行为。所以，基于声望分发奖励比基于用户行为分发奖励要更加利于平台和用户社群的发展。\\
+上述方案的意图在于，只要某用户试图采用不被认可的行为牟取奖励，就注定失败。不过，只要该用户及时停止胡作非为，为平台和社群提供更多有价值的贡献，他也能够获得相应的奖励。\\
+上述方案可以很好地适配Gnews平台的功能，但会引出一系列需要充分讨论的问题，不过最终结论是，上述方案可以很好地解决现阶段的困难，并且没有引入明显的漏洞。
+* 概括提案背后的构思
+直接奖励用户行为的模式存在严重漏洞，因为相同的行为可以具有不同的价值、贡献，直接以固定积分奖励用户的行为，会导致用户都倾向于采用低成本的方式“刷”奖励，即出现大量影响观感的“水军”行为。考虑到Gnews平台更加希望鼓励作者提供优质原创内容，鼓励读者积极参与讨论并发表有价值的评论（点赞、转发、收藏），而不是鼓励作者提供低质量内容和读者低价值、无意义、影响观感的“水军”行为。所以，现阶段直接根据用户行为进行奖励的模型不可行，而一种更加公平可行、更有利于平台和用户社群的模式，就是基于用户的贡献进行奖励。\\
+\\
+如果某用户的行为得到其他用户的广泛认可，那么该行为至少具有阶段性的贡献。用户得到的认可越多，表明其对社区的贡献越大，得到的奖励也应该越多。所以，上述方案以声望来代表用户对平台和社群的贡献，同时发行一种流通通证，根据用户的声望进行奖励，声望高者奖励多。\\
+
+声望Prestige就是用户的贡献量证明(Proof of Contribution)
+
 声望代表用户对社区的贡献，由其他用户对该用户的认可（点赞、评论、转发、收藏、关注等）决定：
 - 如果用户得到广泛的认可（被大量用户关注，文章被大量点赞、收藏、转发，评论被大量点赞、回复），那么该用户的声望应该比较高。
 - 如果用户得到平台“声望大V”的认可，那么该用户的声望也比较高。
@@ -40,16 +84,8 @@ P_{m+1}=R_kP_m
 同时，为了使用户看到的声望值更加直观，迭代结束后需要对结果进行乘数扩大，保证\(||P||=N\)，即用户声望的平均值保持为\(1\). 对于刚进入平台的新用户，他们的初始声望为\(0\)。\\
 \\
 为了后续讨论的方便，暂且将Gnews声望通证称为GPT，即Gnews Prestige Token。
-** 奖励的发行与分配
-Gnews团队可以发行一种在平台内部流通的通证，并以此通证平台贡献者的奖励（姑且称发行的通证为GNC - Gnews Coin，后文将简单讨论其通证经济模型）。Gnews团队可以根据平台的使用情况，在认为合适时间增发GNC，并将新发行的GNC大部分作为用户奖励，每个用户获得的奖励正比于自己的声望，剩余部分则作为平台收益归Gnews团队所有。
-** 防止无意义的用户行为得到奖励
-上述建议的优点在于，它能防止用户通过无意义、无价值、不被认可的“水军”行为获得奖励，因而既能减少Gnews平台中低质量、影响观感的用行为，又能激励高质量、有价值的用户行为。所以，基于声望分发奖励比基于用户行为分发奖励要更加利于平台和用户社群的发展。\\
-上述方案的意图在于，只要某用户试图采用不被认可的行为牟取奖励，就注定失败。不过，只要该用户及时停止胡作非为，为平台和社群提供更多有价值的贡献，他也能够获得相应的奖励。\\
-上述方案可以很好地适配Gnews平台的功能，但会引出一系列需要充分讨论的问题，不过最终结论是，上述方案可以很好地解决现阶段的困难，并且没有引入明显的漏洞。
-* 概括提案背后的构思
-直接奖励用户行为的模式存在严重漏洞，因为相同的行为可以具有不同的价值、贡献，直接以固定积分奖励用户的行为，会导致用户都倾向于采用低成本的方式“刷”奖励，即出现大量影响观感的“水军”行为。考虑到Gnews平台更加希望鼓励作者提供优质原创内容，鼓励读者积极参与讨论并发表有价值的评论（点赞、转发、收藏），而不是鼓励作者提供低质量内容和读者低价值、无意义、影响观感的“水军”行为。所以，现阶段直接根据用户行为进行奖励的模型不可行，而一种更加公平可行、更有利于平台和用户社群的模式，就是基于用户的贡献进行奖励。\\
-\\
-如果某用户的行为得到其他用户的广泛认可，那么该行为至少具有阶段性的贡献。用户得到的认可越多，表明其对社区的贡献越大，得到的奖励也应该越多。所以，上述方案以声望来代表用户对平台和社群的贡献，同时发行一种流通通证，根据用户的声望进行奖励，声望高者奖励多。
+
+
 * 简述现有困难及其解决
 现阶段的Gnews激励机制面临的困难是，无法有效区分不同价值的用户行为，导致用户倾向于采用低价值的方式（即“灌水”）获得奖励。\\
 \\
