--- a/g.series/1.org
+++ b/g.series/1.org
@@ -15,7 +15,30 @@ Gnews团队的愿景是，打造一个开放、无广告的免费平台，使最
 除了解决发行问题，还必须构建代币流通市场，才能实现经济上的自我维持。因为任何货币都必须在流通中定价，完成定价的货币才能交易其他资源和货币，能够与其他资源和货币交易才能将价值变现，将价值变现才能实现经济上的自我维持。\\
 如何构建代币流通市场？笔者认为，平台需要提供代币的支付功能，并允许用户自由地进行情报交易。文贵先生曾表示，Gnews平台的战略定位是全球情报交易中心。在Gnews平台上发生的每一笔情报交易，都需要使用Gnews的代币进行支付。所以，情报的买家就需要先向Gnews团队和用户购买平台代币，然后将代币支付给卖家。代币的持有者就可以通过出售代币的方式将价值变现。最终，只要平台上的情报市场达到一定规模，Gnews平台就能够实现经济上的自我维持。
 * 声望机制
-声望代表用户的文章和评论所蕴含的价值，通过被其他用户认可累积。当文章或评论被认可时，创作者的声望将得到提升。“水军”用户不能得到广泛认可，其声望值低。高声望者的认可行为，将使创作者提升更多声望。低声望的“水军”要捧红一个伪大V将非常困难。同一用户对同一文章或评论的认可行为对声望的提升边际递减。回复链上的前楼用户将平分声望的增量（作者为第零楼）
+引入声望的意图是，对用户的文章和评论所蕴含的价值进行估算，同时激励高质量文章和评论的创作者。根据笔者的思路，创作的价值总是由读者的认可决定。在Gnews平台上，所有的文章和评论都可以被用户认可，所有的用户都可以通过点赞、评论、收藏等行为认可文章和评论。\\
+\\
+以用户的声望来代表用户创作的价值。根据估算思路，用户的声望应该通过被其他用户认可而积累，当文章和评论被认可时，创作者的声望将有所提升。创作力越高，越能提供高质量的文章和评论的创作者，就越能获得广泛的认可，其声望值就越高；反之，无创作力的用户（如“水军”）不能创作高质量的文章和评论，故无法得到广泛认可，其声望值就低。\\
+声望的高低还将决定该用户的认可行为的效果：高声望者的认可行为，将使创作者提升更多声望。所以，低声望的“水军”要捧红一个伪大V将非常困难。而且，同一个用户对同一篇文章或评论的认可效果边际递减：随着认可行为的增长，每次认可都带来更少的声望提升。所以，用户将很难通过“灌水”行为获得声望。\\
+\\
+
+高质量的文章还可能引发广泛的讨论，而独到的评论则可能推动讨论进深。每篇文章都与评论区共同构成一棵“内容树(Content Tree)”，承载了创作者和评论者共同创造的价值。
+
+
+
+文章作为“根节点”，文章的评论为文章“子节点”，评论的回复则为评论的“子节点”。以此类推。
+
+
+对文章的认可使创作者的声望提升，对文章评论的认可使评论者的声望提升。
+
+
+
+
+
+
+
+
+回复链上的前楼用户将平分声望的增量（作者为第零楼）
+
 假设用户\(i\)的声望为\(P_i\)，用户\(j\)的声望为\(P_j\)，\(v\)为认可行为的
 \begin{equation}
 \Delta P_i = v P_j \cdot \exp(- \beta n) \cdot \frac{1}{L}
