--- a/g.series/gip/proof.of.value.org
+++ b/g.series/gip/proof.of.value.org
@@ -13,39 +13,34 @@ Gnews团队的愿景是，打造一个开放、无广告的免费平台，使最
 如何以原创、思想和情报价值为锚发行代币呢？首先要估算文章和评论所蕴含的价值，然后根据估算结果决定发行量。而作为铸币权的主要贡献者，文章和评论的创作者将获得相应的代币奖励。那么，如何估算文章和评论的价值呢？笔者的思路是，创作的价值总是由读者的认可决定。换言之，文章和评论所蕴含的价值，取决于它被认可的程度。被越广泛地认可，代表其蕴含的价值越高。所以，Gnews需要诉诸用户社群的力量，以估算文章和评论的价值：所有文章和评论都可以被用户认可，所有用户都可以通过点赞、转发等行为认可文章和评论。此外，Gnews平台还必须尽力保证文章和评论的质量。因为任何试图以低价值的锚来铸币的行为，最终都将损害自己的利益。如何保证文章和评论的质量？笔者的思路是，通过价值估算来区分高质量创作和无价值行为，以高质量创作为锚进行铸币，并给予创作者更多的代币奖励。所以，Gnews需要实现定量的价值估算和用户激励，才能实现以创作价值为锚发行代币的构想。为此，笔者设计了用户声望机制，作为该问题的解决方案。\\
 \\
 除了解决发行问题，还必须构建代币流通市场，才能实现经济上的自我维持。因为任何货币都必须在流通中定价，完成定价的货币才能交易其他资源和货币，能够与其他资源和货币交易才能将价值变现，将价值变现才能实现经济上的自我维持。\\
-如何构建代币流通市场？笔者认为，平台需要提供代币的支付功能，并允许用户自由地进行情报交易。文贵先生曾表示，Gnews平台的战略定位是全球情报交易中心。在Gnews平台上发生的每一笔情报交易，都需要使用Gnews的代币进行支付。所以，情报的买家就需要先向Gnews团队和用户购买平台代币，然后将代币支付给卖家。代币的持有者就可以通过出售代币的方式将价值变现。最终，只要平台上的情报市场达到一定规模，Gnews平台就能够实现经济上的自我维持。
+如何构建代币流通市场？笔者认为，平台需要提供代币的支付功能，并允许用户自由地进行情报交易。文贵先生曾表示，Gnews平台的战略定位是全球情报交易中心。在Gnews平台上发生的每一笔情报交易，都需要使用Gnews的代币进行支付。所以，情报的买家就需要先向Gnews团队和用户购买平台代币，然后将代币支付给卖家。代币的持有者就可以通过出售代币的方式将价值变现。最终，只要平台上的情报市场达到一定规模，Gnews就能够实现经济上的自我维持。
 * 声望机制
-引入声望的意图是，对用户的文章和评论所蕴含的价值进行估算，同时激励高质量文章和评论的创作者。根据笔者的思路，创作的价值总是由读者的认可决定。在Gnews平台上，所有的文章和评论都可以被用户认可，所有的用户都可以通过点赞、评论、收藏等行为认可文章和评论。\\
+引入声望机制的意图是，对用户的文章和评论所蕴含的价值进行估算，同时激励高质量文章和评论的创作者。\\
 \\
-以用户的声望来代表用户创作的价值。根据估算思路，用户的声望应该通过被其他用户认可而积累，当文章和评论被认可时，创作者的声望将有所提升。创作力越高，越能提供高质量的文章和评论的创作者，就越能获得广泛的认可，其声望值就越高；反之，无创作力的用户（如“水军”）不能创作高质量的文章和评论，故无法得到广泛认可，其声望值就低。\\
-声望的高低还将决定该用户的认可行为的效果：高声望者的认可行为，将使创作者提升更多声望。所以，低声望的“水军”要捧红一个伪大V将非常困难。而且，同一个用户对同一篇文章或评论的认可效果边际递减：随着认可行为的增长，每次认可都带来更少的声望提升。所以，用户将很难通过“灌水”行为获得声望。\\
-\\
-
-高质量的文章还可能引发广泛的讨论，而独到的评论则可能推动讨论进深。每篇文章都与评论区共同构成一棵“内容树(Content Tree)”，承载了创作者和评论者共同创造的价值。
-
-
-
-文章作为“根节点”，文章的评论为文章“子节点”，评论的回复则为评论的“子节点”。以此类推。
-
-
-对文章的认可使创作者的声望提升，对文章评论的认可使评论者的声望提升。
-
-
-
-
-
-
-
-
-回复链上的前楼用户将平分声望的增量（作者为第零楼）
-
-假设用户\(i\)的声望为\(P_i\)，用户\(j\)的声望为\(P_j\)，\(v\)为认可行为的
+首先，定义用户的声望(Prestige)代表其创作的价值总量。由于创作的价值总是由读者的认可决定，所以用户的声望应该通过被其他用户认可而积累。当文章和评论被认可时，创作者的声望将有所提升。记用户\(i\)的声望为\(P_i\)，每当被认可，用户的声望将获得提升\(\Delta P_i\)。\\
+创作力越高，越能提供高质量的文章和评论的用户，就越能获得广泛的认可，其声望值就越高；反之，无创作力的用户（如“水军”）不能创作高质量的文章和评论，故无法得到广泛认可，其声望值就低。\\
+用户声望的高低还应该决定其认可行为的效果。高声望者的认可行为，将使被认可文章或评论的创作者提升更多声望，即
 \begin{equation}
-\Delta P_i = v P_j \cdot \exp(- \beta n) \cdot \frac{1}{L}
+\Delta P_i \propto P_j
 \end{equation}
-
-Proof of Value
-
-
-
-
+所以，低声望的“水军”要捧红一个伪大V将非常困难。\\
+不同的认可行为应该带来不同的声望提升。例如，相比给文章点赞，收藏应该给创作者带来更多的声望提升。所以，不同的认可行为对应不同的声望提升效率\(v\)，即
+\begin{equation}
+\Delta P_i \propto v P_j
+\end{equation}
+为保证用户无法通过“灌水”行为获得声望，同一个用户对同一篇文章或评论的认可效果还应该边际递减。所以，随着认可行为的增长，每次认可都带来更少的声望提升，即
+\begin{equation}
+\Delta P_i \propto v P_j \cdot \exp(- \beta n)
+\end{equation}
+其中，\(n\)为同一个用户对同一篇文章或评论的认可数量，\(\beta\)参数为边际递减的速率。\\
+高质量的文章还可能引发广泛的讨论，而独到的评论又可能推动讨论进深。每篇文章和评论共同构成一棵以文章为根节点、以评论为各级子节点的思想树(Idea Tree)。“思想树”上的所有节点均为思想节点，它们承载了创作者和评论者创造的价值。笔者认为，评论应该视为基于文章或其他评论的二次创作，每当“思想树”上的某个思想节点被认可，从该节点到根节点路径上的所有思想的创作者共享声望的增量，即每个创作者的增量为
+\begin{equation}
+\Delta P_i \propto v P_j \cdot \exp(- \beta n) \cdot \frac{1}{L+1}
+\end{equation}
+其中，\(L\)为被认可的思想节点的深度，即从该节点到根节点的路径长，根节点的深度为0。\\
+最后，取声望增量的计算方程为
+\begin{equation}
+\Delta P_i = \frac{v \cdot \exp(- \beta n)}{L+1} \cdot P_j   
+\end{equation}
+* 许可
+本文遵循[[https://creativecommons.org/licenses/by/4.0/][CC BY 4.0]]协议。
