--- a/pandemic/draft.org
+++ b/pandemic/draft.org
@@ -1,7 +1,4 @@
-* 前言(d)
-  :PROPERTIES:
-  :UNNUMBERED: 1
-  :END:
+* 引言
 第一章（现代性与大流行）试图还原大流行的发生机制和过程，揭示现代性与大流行的内在联系，即现代性使大流行的设计和执行成为可能。\\
 第二章（现代性的深层危机）将讨论大流行揭露的现代性深层危机，即现代社会无力防止大流行发生，又妨碍良知发挥防范大流行的作用。这个危机的根源，是现代性对工具理性的过度信任和使用，以至于压制甚至扭曲了良知功能。不可否认，工具理性在许多领域非常有效，但超出工具理性范畴地使用工具理性（工具理性过度扩张）将挤压良知的空间。这种对良知的压制会导致良知在那些需要发挥作用的时候失效。无独有偶，工具理性同样挤压了人先验的美学感知的空间，现代人的审美是被工具理性（科学）所设计的。这本质上是现代性的结构危机，工具理性的过度扩张，导致其他人类的天赋能力受到挤压，无法发挥功能的同时，还逐渐畸形。而这种畸形成为一种现代社会的传统，不断地影响着所有现代人，塑造者他们的自我认知。这种塑形将导致现代社会在过度释放工具理性而压制其他天赋人性的路上越走越远。越多天赋人性的丧失，将导致人类在那些领域越发无能，越发依赖工具理性。而大流行就是在这种工具理性的滥用中诞生的。\\
 第三章（脆弱的良知）将从大流行的普遍性，以及现代性的深层危机出发，揭示一个隐藏于人性之中的深层危机，即人拥有感知和向往美善的良知，但人的行为却总是导致良知所不接受的罪行。大流行既具有普遍性，有具有特殊性。它的特殊性源于现代性，而普遍性体现在类似结构的罪行并非现代性的独特产物，而是人类历史始终伴随的韵脚。这种普遍性提醒我们，罪行的根源不在于现代性，而在于始终伴随人类的魔咒。尽可能收缩工具理性的空间，让良知可以发挥功能，在一定程度上能够解决现代性的危机，但它的结构危机却并非完全来源于我们错误或者偏差的认知。它本质上来源于我们良知的一个结构危机。如果我们斥责工具理性过度扩张，就必须承认良知的脆弱。当良知与工具理性产生张力时，通常是良知会作出让步。虽然良知具有判断善恶的能力，但它总不能规范人的行为。我们承认我们总能分辨并且向往美善，当我们发现我们总不能得到美善的结果。\\
@@ -39,8 +36,7 @@
 为集体毁灭服务的个人理性
 自我保全的理性
 结论
-** 既是执行者/施害者又是被害者(d)
-** 无意识社会与意识的注入（产生）(d)
+
 *** 精英主义
 *** 园艺文化/医疗文化（（高层精英的）社会意识）
 现代性可以理解为“理性化”，我称之为理性的工具化。自启蒙运动，理性和科学成为新的神话和宗教。现代社会以对自然和自身的积极管理态度著称。科学活动不是为了科学而科学；首要的，它应该充当一个力量强大的工具，以允许工具持有者改善现状，根据人类的计划和设计改造现实，并帮助推动这个工具达到自我完善。如今启蒙理性变成了工具理性。
@@ -61,7 +57,7 @@
 
 
 
-这个叫性恶论，不是原罪论。这不是真理。
+
 这个深层危机就是，现代文明提供了一种压制表达的良知结构，导致唯一防止人作恶的良知失效了。
 良知需要一种表达的结构，现代文明提供了良知结构
 （如何理解现代文明下的疫苗灾难？）
@@ -76,8 +72,7 @@
 通常是工具理性与良知会出现张力，其实认识真理之理性应该不会与良知有张力，因为它们不在同一个领域发挥功能。但工具理性和良知会在同一个地方发挥功能，那就是行为的选择上。
 （律法是通过罪借律法生恶欲显明罪恶极了，它显明的是一个罪的权势，一个堕落的趋势）
 （良知是通过罪借良知行出败坏）
-** 现代防卫的破产(d)
-* 现代性的深层危机(d)
+* 现代性的深层危机
 作为使工具理性制度化的现代官僚系统。
 大流行揭示出现代性具有深层的结构危机。
 现代性崇尚的以人的理性控制社会，在防范大屠杀式灾难上，并没有拥有比古典或中世纪时期更好的效果。
@@ -87,18 +82,12 @@
 现代的官僚制度、理性精神、高效原则、科学主义（思维）、赋予主观世界以价值等理论，不包含任何可以防止此类暴行的可能性的机制，也没有任何东西能够将此类行为定义成暴行。
 
 现代文明当然不是大流行的充分条件，但无疑是必要条件。没有现代文明，疫苗灾难是不可想象的。正是由于现代文明的工具理性精神，已经将它制度化的官僚体系形式，才使得疫苗灾难成为可能，并且使它的执行方案格外合理。
-** 作为现代性之??的大流行(d)
+** 作为现代性之??的大流行
 
 如果不是俄乌战争，大多数救助者可能继续完成着他们的工作，泽连斯基可能也继续当着乌克兰历史上众多总统中的一员。如果不是大流行，我们也无法知道那些平时和睦的邻居会成为助纣为虐的“大白”。如果不是大流行彻底撕开中共的虚假面具，许多的战友也不会凝聚到爆料革命之中。
 遭遇过绑架、共同经历过人质磨难的夫妇离婚率出奇的高。在恐怖事件发生的过程中，平常的好丈夫“被证明是”自私的人，只顾自己的死活。曾经大胆的生意人表现出令厌恶的怯懦；而足智多谋的“男子汉”面如土灰。人的两面哪个更加真实？问题错了。这两面都是受害者一直具有的品性，它们只是在不同时间和不同环境下显露而已。“好的”一面之所以看起来正常只是因为正常的环境使它覆盖于另一面之上。而另一面尽管通常看不见，却总是存在。这个发现引人注目的是，如果不是遭遇绑架，这“另一面”将可能永远隐藏下去。我们缘引上述例子的结论是，要不是大流行，大多数救助者将继续行进于他们的独立道路上，一些人从事慈善工作，一些人过着简单而不引人注目的生活。他们是潜在的英雄，常常无法把他们与常人区分开。不可能“提前看出”个人为牺牲而做出准备或者个人在灾难面前会表现出懦弱的迹象、征兆或者暗示。
 大流行造成的痛苦（让人产生强烈意愿不去面对）就是要令人痛苦地去怀疑大流行可能远不仅仅是一次失常，不是人类进步的坦途上的一次偏离。大流行并不是现代文明的对立面。我们猜想，大流行只是揭露了现代社会的另一面，这两面很好地、协调地依附在同一实体之上。它们不仅仅是一个硬币的两面，而且它们不能离开对方单独存在。
 事实上，大流行过程中的每一个因素都是正常的，即使大流行成为可能的所有条件都是完全符合现代文明的原则和价值观。“正常”还指它们符合人类追求幸福和完美社会的正确方式。毁灭机器与有组织的社会从结构上没有区别。就它所扮演的角色而言，毁灭机器就是组织起来的社群。
-** 文明化进程的涵义(d)
-深深根植于现代社会自我意识中的病因学神话实则是一个良知升华的故事，即人性从野蛮中逐渐升华。专家一口相信人类的问题是错误的政策的结果，一旦运用科学的、正确的方式制定政策，就可以消灭这种问题。如此形成的现代“园艺”国家观，将它所统治的社会看做是设计、栽培和喷杀杂草等活动的对象。
-从这个角度看待大流行，它就只能被理解为文明（即人类有目的的、受理性支配的活动）无法将自然留在人身上的任何不良的、与生俱来的癖好包容在内的结果。换言之，我们至今还不够文明。未完成的文明化进程还有待画上句号。如果非要从大流行中得到教训，那就是，防止野蛮行为一次次地发生显然还需要更多的文明化成就。在这个教训中，没有任何东西可以质疑这种成就在未来的作用和最终的结果。我们肯定是朝着正确的方向前进，而或许我们的速度还不够快。（注：南辕北辙，如果往错误的方向加速，只能越来越偏离正道）
-随着大流行真相的揭开，它的另外一种解释可能更加可信。大流行揭示了当人的良知/本性（厌恶罪恶、杀戮，不倾向于暴力，害怕负罪感，害怕为不道德的行为负责）遭遇到文明的产物当中最备受珍视（良知？工具理性？）的实际效率，即遭遇到其技术、选择的理性标准、思想和行为服从于经济与效能的倾向的时候，就暴露出了它的不足与脆弱。大流行从人类的高级实验室中诞生，乘坐最先进的交通工具扩散到世界各地，配备最先进的疫苗武器，自始至终有着科学的组织和设计。现代文明不是大流行的充分条件，但毫无疑问是必要条件。没有现代文明，大流行是不可想象的。正式现代文明的理性世界让大流行变得可以想象。
-大流行之所以对于我们理解现代官僚制度的理性化模式是如此关键，不仅仅一不主要是因为它提醒了我们官僚制度对于效率的追求是刻板和在良知上是多么的盲目。即使我们全然理解了这史无前例的全人类屠杀在什么样的程度上依赖于已经充分发展并根深蒂固的精密而准确的劳动分工的技巧和习惯，依赖于命令和信息保持畅通无阻，或者依赖于自发而又互为补充的非个人的协调行动。简言之，依赖于在办公室分为里生长得最为茂盛的那些技巧和习惯，大流行的意义也不会得到全面的表述。一旦我们意识到“最终解决”的观念在何种程度上是官僚制度文化的一个产物，那么大流行投射在我们对官僚制度之理性的理解上的光芒就是最动人的了。
-在大流行的实施过程中，没有任何时候与理性的原则发生过冲突。无论哪个阶段，“最终解决”都不与理性地追求高效和最佳目标的实现相冲突。相反，它始终以一种。这并不意味着大流行是现代官僚体系或者它所体现的工具理性文化所决定的。更不是说，现代官僚体系一定会导致大流行一类的全人类大屠杀的现象。不过，单单工具理性的规则无法防止这种现象的发生。这些规则中没有任何东西可以将“社会工程”采取的大屠杀式的手段视为不正当，或者是将在它们作用下的行为视为非理性而加以摈弃。进一步说，我认为官僚制度文化是大流行得以构思、执行并最终实现的特定环境。它促使我们将社会视为一个管理的对象，视为许多亟待解决的“问题”的集合，视为需要被“控制”、“掌握”并加以“改进”或者“重塑”的一种“性质”，视为“社会工程”的一个合法目标，总而言之就是视为一个需要设计和用武力保持其秩序的花园。我还认为正是由于工具理性的以及将它制度化的现代官僚体系形式，才使得大流行之类的方案不仅有了可能，而且格外“合理”。
 ** 压制个人良知的社会机制（道德冷漠的社会生产）
 （大流行比大屠杀更难以察觉的点在于给人注射疫苗可以出于对他好的想法。大流行比大屠杀更加隐蔽、更加具有迷惑性。）
 重构克服良知天性（动物性同情）的社会机制。这是与天生的道德自抑相悖的行为的社会生产，能够将从任何”正常“意义上不是”良知败坏“的人转变为凶手（帮凶）或者大屠杀过程中有意识的合作者。
@@ -106,6 +95,13 @@
 ** 压制系统良知的社会机制（道德盲视的社会生产）（平庸之恶）
 这种社会机制具有更加邪恶的潜力，使更大范围的人被卷入到实施大屠杀的行动当中，而这些人在此过程中从来没有主动地面对艰难的良知抉择，也就没有了主动地面对评理良心谴责、反抗的需要。从来没有在良知问题上出现过挣扎，因为这些行动的良知层面并非一目了然，或者说因为这些层面被有意地杜绝了被发现与讨论。换言之，行动的良知特征要么是不可见的，要么就是被精心掩盖了。
 行为的中介，即个人的行为通过另一个人、一个中间人来表现的现象，这个人站在我和我的行为中间，使我不能体验到我的行动。它作为现代社会最为显著和基本的特征。意图和实际完成之间有很大的距离，两者之间的空间里充满了大量的细微行为和不相干的行为者。中间人挡住了行动者的目光，让他们看不见行为的后果。行为与其后果之间的生理、精神距离的增加超出了良知发挥作用的程度。它消除了行为的良知责任，因而避免了个人的良知与行为造成的不良后果之间的冲突。随着大多数具有社会意义的行为得到了一长串复杂的因果和功能依赖（劳动分工）关系的中介，良知困境消失在人的视野之中，进一步的良知审视和有意识的选择的机会也将越来越少。
+* 现代观念
+** 文明化进程的涵义
+深深根植于现代社会自我意识中的病因学神话实则是一个良知升华的故事，即人性从野蛮中逐渐升华。专家一口相信人类的问题是错误的政策的结果，一旦运用科学的、正确的方式制定政策，就可以消灭这种问题。如此形成的现代“园艺”国家观，将它所统治的社会看做是设计、栽培和喷杀杂草等活动的对象。
+从这个角度看待大流行，它就只能被理解为文明（即人类有目的的、受理性支配的活动）无法将自然留在人身上的任何不良的、与生俱来的癖好包容在内的结果。换言之，我们至今还不够文明。未完成的文明化进程还有待画上句号。如果非要从大流行中得到教训，那就是，防止野蛮行为一次次地发生显然还需要更多的文明化成就。在这个教训中，没有任何东西可以质疑这种成就在未来的作用和最终的结果。我们肯定是朝着正确的方向前进，而或许我们的速度还不够快。（注：南辕北辙，如果往错误的方向加速，只能越来越偏离正道）
+随着大流行真相的揭开，它的另外一种解释可能更加可信。大流行揭示了当人的良知/本性（厌恶罪恶、杀戮，不倾向于暴力，害怕负罪感，害怕为不道德的行为负责）遭遇到文明的产物当中最备受珍视（良知？工具理性？）的实际效率，即遭遇到其技术、选择的理性标准、思想和行为服从于经济与效能的倾向的时候，就暴露出了它的不足与脆弱。大流行从人类的高级实验室中诞生，乘坐最先进的交通工具扩散到世界各地，配备最先进的疫苗武器，自始至终有着科学的组织和设计。现代文明不是大流行的充分条件，但毫无疑问是必要条件。没有现代文明，大流行是不可想象的。正式现代文明的理性世界让大流行变得可以想象。
+大流行之所以对于我们理解现代官僚制度的理性化模式是如此关键，不仅仅一不主要是因为它提醒了我们官僚制度对于效率的追求是刻板和在良知上是多么的盲目。即使我们全然理解了这史无前例的全人类屠杀在什么样的程度上依赖于已经充分发展并根深蒂固的精密而准确的劳动分工的技巧和习惯，依赖于命令和信息保持畅通无阻，或者依赖于自发而又互为补充的非个人的协调行动。简言之，依赖于在办公室分为里生长得最为茂盛的那些技巧和习惯，大流行的意义也不会得到全面的表述。一旦我们意识到“最终解决”的观念在何种程度上是官僚制度文化的一个产物，那么大流行投射在我们对官僚制度之理性的理解上的光芒就是最动人的了。
+在大流行的实施过程中，没有任何时候与理性的原则发生过冲突。无论哪个阶段，“最终解决”都不与理性地追求高效和最佳目标的实现相冲突。相反，它始终以一种。这并不意味着大流行是现代官僚体系或者它所体现的工具理性文化所决定的。更不是说，现代官僚体系一定会导致大流行一类的全人类大屠杀的现象。不过，单单工具理性的规则无法防止这种现象的发生。这些规则中没有任何东西可以将“社会工程”采取的大屠杀式的手段视为不正当，或者是将在它们作用下的行为视为非理性而加以摈弃。进一步说，我认为官僚制度文化是大流行得以构思、执行并最终实现的特定环境。它促使我们将社会视为一个管理的对象，视为许多亟待解决的“问题”的集合，视为需要被“控制”、“掌握”并加以“改进”或者“重塑”的一种“性质”，视为“社会工程”的一个合法目标，总而言之就是视为一个需要设计和用武力保持其秩序的花园。我还认为正是由于工具理性的以及将它制度化的现代官僚体系形式，才使得大流行之类的方案不仅有了可能，而且格外“合理”。
 ** 文明化进程的道德后果（现代文明的深层危机）
 文明化有两个核心：对非理性和本质上反社会的力量加以压制，以及从社会中逐渐且毫不留情地消除暴力（其实是在国家的控制之下将暴力集中，在国家当中暴力被用来守护共同体的边界和维持社会的秩序）。文明社会观，首要是把文明社会看作一种道德/良知力量，看做一种在施加规范秩序和法制当中相互合作、相互补充的制度体系，而秩序和法制维护了社会和平与个人安全。这中观点不一定产生误导，但对于大流行而言，它必然只能看到一个方面。它使人们无法关注到文明具有破坏性的另一面，并且有效地将那些坚持现代秩序具有双面性的反思者推向沉默和边缘。
 我认为大流行的主要教训就是必须严肃地对待这些批评、反思并借此拓展文明化进程的理论模式，以涵盖文明化进程那种降低贬斥社会行动中的良知困境并使之丧失权威的倾向。
@@ -115,9 +111,6 @@
 科学取代宗教成为最突出的理智的权威，成为文明的世界观的定义者、审判者和护卫者。替代宗教或者形而上学的总体观点的是现代认识论的量大基础，理性主义和经验主义。现代的理性主义提出、最终肯定并以此为出发点的概念是，人是最高智慧。现代经验主义提出的，是物质世界是基本的实在或者唯一的实在。它们分别形成了世俗的人文主义和科学的唯物主义。现代宇宙的秩序原则上只需要凭借人的理性和经验的能力就可以认识了，而人类本性的其他方面——感情的、审美的、伦理的、意志的、相关的、想象的、顿时领悟的——对于世界的客观认识，一般被视作风马牛不相及的或者是扭曲的。对世界的认识现在主要是冷静的、不为个人感情所左右的科学研究的问题，而且其获得成功时候带来的并不是纯粹的精神解放的体验，而是智力的控制和物质的进步。
 随着进化论与其在其他领域里的大量成果的整合，现在的人们认识到，人类的本质与起源以及自然的变迁的起因完全是由于自然的原因，并且是能从经验上观察出的变化过程。人不再是被一个造物主创造，而是从物种中演化而来。人类的心灵（或良知良心）不是造物主的赠予，而是生物的工具。自然的结构和运动不是造物主仁爱的设计和目的的结果，而是非道德的、随机的、残酷的生存竞争的结果。在生存竞争中，成功不是导致美德而是适应。
 在现代，人的自主得到了完全的肯定，而与此同时则是任何会阻碍人的天赋权利以及生存的自由意志和个人的自我表现的可能性的宗教信仰或制度结构越来越受到贬低。对现代人而言，知识的效用是更好地让自然服从人类的意志。人类凭借一个信念，认为人类凭借天赋的理性和科学的成就将逐渐实现一个以和平、理性思想、物质丰富以及人类驾驭自然为标志的现世理想的时代。基督教原罪的观念被抛弃，取而代之的是人类的自我发展、理性与科学最终战胜人类的无知、痛苦和社会的罪恶的乐观主义信念。现代的目的是为人类创造更大程度的自由，以摆脱一切束缚，如自然的束缚；不公正的政治结构、社会结构或者经济结构的束缚；约束性的形而上学观念或宗教教义的束缚；摆脱一切传统的束缚，凭借自主的人类理性能力，现代的人独立自主地向前行进，实现他的现世理想。
-** 现代性与良知结构
-宗教信仰的缺失
-作为良知结构的现代社会
 * 脆弱的良知(d)
 难道现代文明是退步吗？是现代文明导致了灾难的发生吗？
 
