--- a/pandemic/pandemic.ref.org
+++ b/pandemic/pandemic.ref.org
@@ -1,15 +1,4 @@
-#+Title:现代文明与大流行
-* 引言
-当谈论到Covid19大流行，大多数人的印象是：它始于人类偶然感染的一种新病毒，随后发展为全球性大流行，导致医疗系统几度崩溃，使全球经济陷入长达三年的衰退期；如今，随着大流行的落幕，社会秩序正在逐渐回归正轨。然而，真相绝非如此。事实上，大流行并非偶然的事件，而是一次人为的病毒、疫苗灾难。它由制造病毒和推动疫苗等事件构成，是一场系统性的、针对全人类的“大屠杀”。\\
-随着病毒溯源的推进和疫苗灾难的显现，大流行的真相将逐渐向公众揭开，政府、媒体和技术官僚的信用也将逐渐被瓦解。在此背景下，全球势必追责大流行的始作俑者，这将进一步推动灭共进程。疫苗灾难也将被青蒿素和健康的精卵子一定程度地解决。最终，大流行会在共产党的灭亡和疫苗灾难的结束中正式落幕。在后中共、后疫苗时代，我们必须面对的一个困难，是重建一个能够防止大流行式灾难再度发生的社会。为此，我们必须正确地理解大流行。
-
-本文试图澄清的一种误解，是将大流行视为一个独立的、突发的社会事件。这种误解导致我们只能从大流行中获得诸如此类的教训：现代医疗体系响应突发、紧急的卫生事件的能力不足；政府处理突发、紧急事件的经验不足。反思的动机也止步于对现代社会体制的不足之处针对性地加以改进，以确保未来在面对类似的突发事件时可以表现得更好。《新加坡应对冠病白皮书》就是这种倾向的产物，它总结了八个做得好的地方和六个有待改进的不足之处，并将推行疫苗接种视为做得好的举措之一。这种不明真相的误解势必导致一个致命的错误，就是将诸如推行疫苗一类的大流行构成要素视为应对大流行的正确举措。\\
-另一种误解是将大流行视作一类普遍、广泛的社会现象的极端情况，即大流行与侵略战争、种族灭绝等社会现象没有本质区别，都是少数人为满足一己私欲犯下的罪行，只是大流行的犯罪对象是全人类而已。大流行只是文明化进程的失败，而不是社会文明化的产物，现代社会始终都是一个被设计来防范甚至消灭这种罪行的组织。事实上，使大流行成为可能的诸多因素并不违背现代社会所崇尚的工具理性，即工具理性本身并不排斥大流行。所以，现代社会试图通过工具理性的设计来防范或者消除大流行是异常困难的。\\
-无论是将大流行视为一个特殊事件还是一类普遍现象，将大流行贬低为现代文明的对立面的误解，最终的结果就是进一步巩固一个的错误观念，即现代社会始终是被设计于防范、应对甚至消除此类灾难的组织。这揭示出一个深层危机，那就是现代社会无法正视作为其产物的大流行，并试图通过自我巩固的方式消除它，而这种方式只会使灾难或者罪行以更加高效、精致、隐蔽的方式发生。
-
-本文的主要目的就是通过还原现代文明与大流行的内在关联，揭示现代性的深层危机并剖析危机的根源所在。第一章（大流行始末）尝试在现代社会场景中还原大流行的核心环节。第二章（）将讨论促使大流行成为可能的社会机制。第三章（）将从文明化进程的角度讨论这些社会机制的思想起源。第四章（）将讨论这些现代信念和思想导致的结果，并剖析现代文明的结构性错误。最后一章（）将讨论本文的阶段性结论，总结大流行揭示的现代性危机，并尝试归纳后续思考工作的方向。
-* 大流行始末
-大流行的发生需要四个核心环节或基本要素，它们分别是现代官僚系统、消除良知困境、迫使受害者合作，以及设计大流行。而现代官僚系统又是消除良知困境、迫使受害者合作以及设计大流行的基础。
+在这个过程中，现有社会秩序会遭受剧烈的冲击，政府、官僚、医疗系统和主流媒体的信用也会有不同程度的瓦解。
 ** 现代官僚系统
 在整个大流行的过程中，现代官僚系统扮演了至关重要的角色。无论是病毒的研究、设计和制造，还是疫苗的研发和推行，现代官僚系统都可谓是“居功至伟”。\\
 解放军生化部队在接到中共高层的指示后，开始有计划地制造一款准生物武器。这项任务被拆分为许多独立的科研项目，分配给军方的病毒研究机构，研究成果甚至以论文或报告的形式在学术界公开发表。最终由武汉P4实验室整合研究成果、设计并制造了SARS-CoV-2病毒。中共军方甚至明目张胆地进行了一项社会病毒实验，在境内小范围地释放了SARS-CoV-1病毒，以验证阶段性研究成果。\\
@@ -24,9 +13,6 @@
 *** 官僚体系行为对象的非人化
 用纯粹技术性、道德中立的方式来表述这些对象。非人化开始于官僚机构行为所针对的对象因距离而可以并实际上被简化为一套定量措施时。在疫苗屠杀中，对于卫生官员而言，对他们的工作对象有意义的说明就是公众的疫苗接种率。
 当官僚体系执行任务的对象被有效地非人化，并因此被抛弃作为道德需求的潜在对象，他们就会被带着道德冷漠的眼光看待。一旦他们的抵抗或不配合阻碍了官僚程序的顺畅，这种道德冷漠就会很快转变为非难和指责。官僚体系甚至会采取某种强制性的手段以保证官僚程序的流畅。
-** 消除良知困境
-** 迫使受害者合作
-** 大流行的设计
 * 问题备注
 1. 如何理解良知悖论？大流行是怎么发生的？现代性+执行者。
 2. 为什么会大流行？现代性+统治者。
